--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "dependencies": {
     "fs-extra": "^3.0.1",
     "request": "^2.81.0",
-    "scriptserver": "^0.1.5",
+    "scriptserver": "kyob1010/scriptserver",
     "scriptserver-command": "^0.1.2",
     "scriptserver-essentials": "^0.1.7",
     "scriptserver-event": "^0.1.0",
-    "scriptserver-json": "^0.1.0",
+    "scriptserver-json": "michaelgira23/scriptserver-json",
     "scriptserver-update": "^1.0.1",
     "scriptserver-util": "^0.1.1"
   }
