--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
     "fs-extra": "^3.0.1",
+    "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
     "scriptserver": "kyob1010/scriptserver",
     "scriptserver-command": "^0.1.2",
