--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/michaelgira23/Cb-craft.net#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "cheerio": "^1.0.0-rc.1",
     "fs-extra": "^3.0.1",
     "request": "^2.81.0",
