--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^1.0.2",
     "cheerio": "^1.0.0-rc.1",
     "fs-extra": "^3.0.1",
+    "properties-parser": "^0.3.1",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
     "sc-hot-reboot": "^1.0.0",
