--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "^3.0.1",
     "properties-parser": "^0.3.1",
     "request": "^2.81.0",
+    "request-progress": "^3.0.0",
     "request-promise-native": "^1.0.4",
     "sc-hot-reboot": "^1.0.0",
     "scriptserver": "kyob1010/scriptserver",
